--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -5,32 +5,37 @@
     </mat-card-header>
     <mat-card-content>
 
-      <form fxLayout="row">
-        <table cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field>
-                <input [(ngModel)]="username" matInput name="username" placeholder="Username" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field>
-                <input [(ngModel)]="username" matInput name="email" placeholder="email" required type="email">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field>
-                <input [(ngModel)]="password" matInput name="password" placeholder="Password" required type="password">
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
+      <form #f="ngForm" fxLayout="row" name="form">
+        <div class="form-group">
+          <table>
+            <tr>
+              <td>
+                <mat-form-field>
+                  <input [(ngModel)]="form.username" matInput name="username" placeholder="username"
+                         required type="text">
+                </mat-form-field>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <mat-form-field>
+                  <input [(ngModel)]="form.email" class="form-control" matInput name="email" placeholder="email"
+                         required
+                         type="email">
+                </mat-form-field>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <mat-form-field>
+                  <input [(ngModel)]="form.password" matInput name="password" placeholder="Password" required
+                         type="password">
+                </mat-form-field>
+              </td>
+            </tr>
+          </table>
+        </div>
       </form>
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
 
     </mat-card-content>
     <mat-card-actions>
